--- a/flight/package.json
+++ b/flight/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
     "json5": "^2.1.3",
+    "moment": "^2.26.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
