--- a/flight/package.json
+++ b/flight/package.json
@@ -21,6 +21,7 @@
     "@vue/cli-plugin-vuex": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "axios": "^0.19.2",
+    "http-proxy-middleware": "^1.0.4",
     "less": "^3.11.2",
     "less-loader": "^6.1.0",
     "mockjs": "^1.1.0",
